# coma_ros

coma_bringup/: CMakeLists.txt  package.xml
coma_bringup/launch/: demo.launch  teleop_fake_ik.launch  teleop_full.launch  teleop_full_fake_ik.launch  teleop_full_path.launch  teleop_full_rviz.launch  teleop_full_rviz_path.launch  teleop_ik.launch  teleop_ik_path.launch  teleop_ik_rviz.launch  teleop_ik_rviz_path.launch
coma_demo/: CMakeLists.txt  package.xml
coma_demo/include/coma_demo/: motion_demo.h
coma_demo/src/: motion_demo.cpp
coma_kinematics/: CMakeLists.txt  package.xml
coma_kinematics/include/coma_kinematics/: cosserat_rod.h  defines.h  ik.h
coma_kinematics/src/: cosserat_rod.cpp  ik.cpp
coma_kinematics/srv/: solveIK.srv
coma_ros/: CMakeLists.txt  package.xml
coma_rviz/: CMakeLists.txt  package.xml
coma_rviz/include/coma_rviz/: visualization.h
coma_rviz/msg/: vis.msg
coma_rviz/rviz/: visualization.rviz
coma_rviz/src/: visualization.cpp
coma_serial/: CMakeLists.txt  package.xml
coma_serial/include/coma_serial/: serial_node.h
coma_serial/msg/: path_command.msg  teleop_command.msg
coma_serial/src/: serial_node.cpp
coma_simple_planner/: CMakeLists.txt  package.xml
coma_simple_planner/include/coma_simple_planner/: planner.h
coma_simple_planner/msg/: configuration.msg
coma_simple_planner/src/: planner.cpp
coma_simple_planner/srv/: path_request.srv
coma_teleop/: CMakeLists.txt  package.xml
coma_teleop/include/coma_teleop/: coma_joy_teleop.h
coma_teleop/launch/: coma_joy_teleop.launch
coma_teleop/src/: coma_joy_teleop.cpp
