<?xml version="1.0"?>
<package>
  <name>coma_demo</name>
  <version>0.0.0</version>
  <description>Motion demonstration for coma</description>

  <maintainer email="spkordell@wpi.edu">Steven Kordell</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/coma_demo</url>
  <url type="bugtracker">https://github.com/spkordell/coma_ros/issues</url>
  <url type="repository">https://github.com/spkordell/coma_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>coma_serial</build_depend>
  
  <run_depend>roscpp</run_depend>	
  <run_depend>coma_serial</run_depend>
  
</package>
