<?xml version="1.0"?>
<package>
  <name>coma_ros</name>
  <version>0.0.0</version>
  <description>The coma_ros package</description>

  <maintainer email="spkordell@wpi.edu">Steven Kordell</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/spkordell/coma_ros/coma_ros/issues</url>
  <url type="repository">https://github.com/spkordell/coma_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>coma_serial</run_depend>
  <run_depend>coma_bringup</run_depend>
  <run_depend>coma_demo</run_depend>
  <run_depend>coma_kinematics</run_depend>
  <run_depend>coma_teleop</run_depend>
  <run_depend>coma_rviz</run_depend>
  <run_depend>coma_simple_planner</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
