<?xml version="1.0"?>
<package>
  <name>coma_rviz</name>
  <version>0.0.0</version>
  <description>The coma_rviz package</description>

  <author email="spkordell@wpi.edu">Steven Kordell</author> 
  <maintainer email="spkordell@wpi.edu">Steven Kordell</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
      
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>