<?xml version="1.0"?>
<package>
  <name>coma_serial</name>
  <version>0.0.0</version>
  <description>The coma_serial package</description>

  <maintainer email="spkordell@wpi.edu">Steven Kordell</maintainer>
  <author email="spkordell@wpi.edu">Steven Kordell</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
